syntax = "proto3";
package gpb;
import "ReactionData.proto";

message Empty {}

message HandshakeRequest
{
	string contents = 1;
}

message HandshakeResponse
{
	string contents = 1;
}

service BLUESPAWN {
	rpc SendHuntMessage (HuntMessage) returns (Empty) {}

	rpc Handshake (HandshakeRequest) returns (HandshakeResponse) {}
}
